# ffwgeraetewart

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  makefile  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-pre-release.yml  build-release.yml  claude-code-review.yml  codeql-analysis.yml  qodana-analysis.yml
src/: main.py
src/data/templates/: template_arbeitskleidung.docx  template_einsatzkleidung.docx  template_equipment.docx  template_handschuhe.docx  template_helm.docx  template_kopfschutzhaube.docx  template_schnittschutzhose.docx  template_schuhe.docx  template_th_handschuhe.docx  template_wathose.docx
src/logic/: convert.py  equipmenttypes.py  files.py  initialize_database.py  logger.py  pathes.py
src/models/: __init__.py  equipment.py  equipmentchecks.py  member.py  psa.py  specialpsa.py  specialpsatemplates.py
src/template_processing/: __init__.py  compose_equipment.py  paragraph_replace_text.py  replace.py
src/templates/: template_arbeitskleidung.docx  template_equipment.docx  template_schnittschutzhelmvisier.docx
src/views/: acceptdialog.py  alterequipmentdialog.py  alterpsadialog.py  customtreeview.py  equipmentgui.py  membergui.py  psagui.py  specialpsagui.py  specialpsatemplategui.py  uielements.py  viewprotocol.py
src/views/equipmentgui_helpers/: alterequipmentdialog.py
src/views/psagui_helpers/: alterpsadialog.py
src/views/specialpsagui_helpers/: specialpsatemplategui.py
