[project]
name = "ffwgeraetewart"
version = "0.1.0"
description = "a german software for firefighters to manage their equipment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docxcompose>=1.4.0",
    "pyinstaller>=6.15.0",
    "python-docx>=1.2.0",
    "sqlalchemy>=2.0.43",
]


[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
